CMS7-5433 - Image cropper doesn't work correctly on thumbnails resized to height 0px  - Applied patch provided by Koen van der Weijden  - Moved configuration code to settings  - Removed duplicate key in Italian translations

--- a/cms/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/editor/crop/crop-editor-dialog.css
+++ b/cms/gallery/frontend/src/main/java/org/hippoecm/frontend/plugins/gallery/editor/crop/crop-editor-dialog.css
@@ -34,8 +34,9 @@
   padding: 5px;
   padding-left:12px;
   margin: 5px 0;
-  min-height: 454px;
-  _height: 454px;
+  min-height: 454px;  
+  height: 454px;
+  overflow:auto;  
 }
 
 .right-crop-area .preview-container {
